--- a/src/form.html
+++ b/src/form.html
@@ -34,6 +34,7 @@
   </section>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script src="data.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+  <script src="js/data.js"></script>
 </body>
 </html>
