--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
-    <script src="data.js"></script>
+    <script src="js/data.js"></script>
   </body>
 
 </html>
