--- a/src/index.html
+++ b/src/index.html
@@ -9,32 +9,75 @@
   <title>America Tv</title>
 </head>
 
-  <body>
-    <div class="login">
-      <form id="formLogin">
-        <div class="imgcontainer">
-          <img src="https://banner2.kisspng.com/20180616/sxr/kisspng-avatar-computer-icons-avatar-icon-5b254abb7cf344.7556131215291706195118.jpg" alt="Avatar" class="avatar">
+<body>
+  <div class="login">
+    <form id="formLogin">
+      <div class="imgcontainer">
+        <img src="https://banner2.kisspng.com/20180616/sxr/kisspng-avatar-computer-icons-avatar-icon-5b254abb7cf344.7556131215291706195118.jpg" alt="Avatar" class="avatar">
+      </div>
+
+      <div class="container">
+        <label for="email_login"><b>Email</b></label>
+        <input type="email" id="email_login" placeholder="Email" type="email_login" required>
+
+        <label for="password_login"><b>Password</b></label>
+
+        <input type="password_login" placeholder="Enter Password" name="psw" id="password" required>
+
+        <button type="submit" class='buttonLogin' id="login">Login</button>
+
+      </div>
+
+      <div>
+        <p class="go-register">¿Todavía no eres miembro?</p><a href="#" id="registerLink" class="link-to-register"> Únete ahora</a>
+      </div>
+    </form>
+  </div>
+
+
+
+  <!-- registro -->
+  <div id="formRegister" class="hidden">
+    <form>
+      <p class="slogan">¡Conéctate con un estilo de vida saludable!</p>
+      <p class="valid-inputs" id="valid-inputs"> </p>
+      <div class="inputs">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">person_outline</i>
+          <input id="nameUser" type="text" class="validate">
+          <label for="nameUser">Nombre</label>
         </div>
+      </div>
 
-        <div class="container">
-          <label for="email_login"><b>Email</b></label>
-          <input type="email" id="email_login" placeholder="Email" required>
-
-          <label for="password_login"><b>Password</b></label>
-          <input type="password_login" placeholder="Enter Password" name="psw" id="password" required>
-
-          <button type="submit" class='buttonLogin' id="login">Login</button>
-
+      <div class="inputs">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">mail_outline</i>
+          <input id="email" type="email" class="validate">
+          <label for="email">Email</label>
         </div>
+      </div>
+      <div class="inputs">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">lock_outline</i>
+          <input id="password" type="password" class="validate">
+          <label for="password">Contraseña</label>
+          <span id="error-password"></span>
+        </div>
+      </div>
+      <div class="inputs">
+        <div class="input-field col s12">
+          <i class="material-icons prefix">check</i>
+          <input id="confirPassword" type="password">
+          <label for="confirPassword">Confirmar contraseña</label>
+        </div>
+      </div>
+      <a href="#terms" id="registerButton" class="btn modal-trigger light-green darken-2"> Registrar</a>
+    </form>
+  </div>
 
-       <div>
-         <p class="go-register">¿Todavía no eres miembro?</p><a href="#" id="registerLink" class="link-to-register"> Únete ahora</a>
-       </div>
-      </form>
-    </div>
 
-    <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
-    <script src="data.js"></script>
-  </body>
+  <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+  <script src="data.js"></script>
+</body>
 
 </html>
