--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 
         <label for="password_login"><b>Password</b></label>
 
-        <input type="password_login" placeholder="Enter Password" name="psw" id="password" required>
+        <input type="password" placeholder="Enter Password" name="psw" id="password_login" required>
 
-        <button type="submit" class='buttonLogin' id="login">Login</button>
+        <button type="button" class='buttonLogin' id="login">Login</button>
 
       </div>
 
@@ -77,7 +77,10 @@
 
 
     <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+    <script src="js/firebase.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/main.js"></script>
+
   </body>
 
 </html>
