--- a/src/register.html
+++ b/src/register.html
@@ -31,7 +31,7 @@
       <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
       <input id="password_repeat" type="password" placeholder="Repeat Password" name="psw-repeat" required> -->
 
-      <button type="button" id="register1111">Registrate</button>
+      <button type="button" id="register">Registrate</button>
       <div>
         <a href="index.html">Regístrate</a>
       </div>
