--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
   <script src="js/firebase.js"></script>
   <script src="js/form.js"></script>
   <script src="js/login.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/mainLogin.js"></script>
   </body>
 
 </html>
