--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
       </div>
     </form>
   </div>
+  <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
   <script src="js/firebase.js"></script>
   <script src="js/form.js"></script>
