--- a/src/register.html
+++ b/src/register.html
@@ -10,7 +10,7 @@
 <body>
 
   <!-- REGISTER -->
-  <div id="resisterStar">
+  <div >
     <div class="imgcontainer">
       <img src="https://cdn.iconscout.com/icon/free/png-256/avatar-375-456327.png" alt="Avatar" class="avatar">
     </div>
@@ -28,6 +28,10 @@
       <label for="psw"><b>Password</b></label>
       <input id="password" type="password" placeholder="Enter Password" name="psw" required>
 
+      <label for="psw"><b>Company</b></label>
+      <input id="company" type="password" placeholder="Enter your company" name="psw" required>
+
+
       <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
       <input id="password_repeat" type="password" placeholder="Repeat Password" name="psw-repeat" required> -->
 
@@ -40,6 +44,7 @@
   </form>
   </div>
   <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
+
   <script src="js/firebase.js"></script>
 
   <script src="js/form.js"></script>
