--- a/src/calendario.html
+++ b/src/calendario.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -37,11 +36,22 @@
   </nav>
   </header>
 
-  <div class="day">
-    <label for="number">Horario</label>
-    <input type="number" id="hour" placeholder="inicia tu hora">
-    <label for="day"></label>
-    <input type="date" id="date" placeholder="inicia tu hora">
+  <div class="container">
+    <div class="">
+      <label for="number">Horario de inicio</label>
+      <input type="number" id="hour" placeholder="inicia tu hora">
+      <label for="number">Horario de fin</label>
+      <input type="number" id="hourFinal" placeholder="inicia tu hora">
+    </div>
+    <div class="">
+      <label for="programName">Horario</label>
+      <input type="text" id="programName" placeholder="nombre del programa">
+    </div>
+    <div class="">
+      <label for="day"></label>
+      <input type="date" id="date" placeholder="inicia tu hora">
+    </div>
+    <button id="guardar" type="button" class="btn btn-danger">Danger</button>
   </div>
   <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
   <script src="js/firebase.js"></script>
