formulario de reserva

--- a/src/calendario.html
+++ b/src/calendario.html
@@ -53,11 +53,11 @@
     </div>
     <button id="guardar" type="button" class="btn btn-danger">Danger</button>
   </div>
+
+</body>
   <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
   <script src="js/firebase.js"></script>
   <script src="js/login.js"></script>
   <script src="js/close.js"></script>
-
-</body>
-
+  <script src="js/data.js"></script>
 </html>
