tabla creada se puede remover

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <p>Recarga</p>
         <p id="extra"></p>
         <input type="button" value="Reservar" id="btn">
-        <table>
+        <table  id="table">
             <tr>
                 <td>Producto</td>
                 <td>Programa</td>
                 <td>Fecha</td>
                 <td>Hora</td>
                 <td>Precio</td>
+                <td>------</td>
             </tr>
-            <div id="table">
-            </div>
         </table>
     </div>
+    
 </body>
 
 <script src="https://www.gstatic.com/firebasejs/5.5.6/firebase.js"></script>
