--- a/src/calendario.html
+++ b/src/calendario.html
@@ -55,11 +55,21 @@
         <button id="guardar" type="button" class="btn btn-danger">Danger</button>
       </div>
     
-  <div class="container text-center">
+  <div class="container">
     <table class="table table-bordered">
       <thead>
+        <tr id="contenedor">
+            <th scope="col">#</th>
+
+        </tr>
+      </thead>
+      <tbody id="bodyTable">
+         
+      </tbody>
+    </table>
+    <!-- <table class="table table-bordered">
+      <thead>
         <tr>
-          <th scope="col">#</th>
           <th scope="col">Lunes</th>
           <th scope="col">Martes</th>
           <th scope="col">Miércoles</th>
@@ -68,8 +78,8 @@
           <th scope="col">Sábado</th>
           <th scope="col">Domingo</th>
         </tr>
-      </thead>
-      <tbody>
+      </thead> -->
+      <!-- <tbody>
         <tr>
           <th scope="row">5:16</th>
           <td colspan="5" rowspan="8">
@@ -685,8 +695,8 @@
         <tr>
           <th scope="row">5:16</th>
         </tr>
-      </tbody>
-    </table>
+      </tbody> 
+    </table> -->
 
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -697,6 +707,7 @@
   <script src="js/login.js"></script>
   <script src="js/close.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/modal.js"></script>
 </body>
 
 
