--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p id="price"></p>
         <p>Recarga</p>
         <p id="extra"></p>
-        <input type="button" value="Reservar" id="btn">
+        <input type="button" value="Poner en lista" id="btn">
         <table  id="table">
             <tr>
                 <td>Producto</td>
@@ -31,6 +31,15 @@
                 <td>------</td>
             </tr>
         </table>
+        <table  >
+            <tr>
+                <td>
+                    <button id="calcul">TOTAL</button></td>
+                <td id="total"></td>
+            </tr>
+        </table>
+        <input type="button" value="Reservar" id="btnReserv">
+        
     </div>
     
 </body>
