--- a/rediseño/index.html
+++ b/rediseño/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <div>
+    <!-- primera vista -->
+    <div class="hidden">
         <div class="container-fluid  color fixed-top">
             <div class="row">
                 <div class="col-3 col-md-1 ">
@@ -38,10 +39,10 @@
                         <div class="card-body ">
                             <div class="row">
                                 <div class="col-md-12 pt-3">
-                                    <input type="email" name="" id="" class="p-1" placeholder="Correo">
+                                    <input type="email" class="p-1" placeholder="Correo">
                                 </div>
                                 <div class="col-md-12 pt-4">
-                                    <input type="password" name="" id="" class="p-1" placeholder="Contraseña">
+                                    <input type="password" class="p-1" placeholder="Contraseña">
                                 </div>
                                 <div class="col-md-12 pt-5 ">
                                     <input type="button" value="INGRESAR" class="p-1 btn color">
@@ -53,12 +54,70 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
-
         </div>
     </div>
+    <!-- fin primera vist -->
+    <!-- segunda vista -->
+    <div>
+        <div class="container-fluid  color fixed-top">
+            <div class="row">
+                <div class="col-3 col-md-1 ">
+                    <a class="navbar-brand text-white" href="#">
+                        <img src="https://pbs.twimg.com/profile_images/1024751913668108290/ZBNNhktZ_400x400.jpg" width="70"
+                            height="70" class="d-inline-block align-top" alt="">
+                    </a>
+                </div>
+                <div class="col-9 col-md-2  text-left  d-flex align-items-center">
+                    <h1>America Tv</h1>
+                </div>
+                <div class="col-12 col-md-6 text-center d-flex justify-content-center align-items-center">
+                    <div class="row text-center">
+                        <div class="col-12 col-md-3">
+                            <h5>RESERVAR</h5>
+                        </div>
+                        <div class="col-12 col-md-5 ">
+                            <h5>MIS RESERVAS</h5>
+                        </div>
+                        <div class="col-12 col-md-4 ">
+                            <h5>PROGRAMACIÓN</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3"></div>
+            </div>
+        </div>
+        <div class="container-fluid slider d-flex justify-content-center align-items-center">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="text-center ">
+                        <h3 class="pt-3 title">Reserva de Publicidad online</h1>
+                    </div>
+                </div>
+                <div class="col-md-12 pt-3 d-flex justify-content-center align-items-center">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body ">
+                            <div class="row">
+                                <div class="col-md-12 pt-3">
+                                    <input type="email" class="p-1" placeholder="Correo">
+                                </div>
+                                <div class="col-md-12 pt-4">
+                                    <input type="password" class="p-1" placeholder="Contraseña">
+                                </div>
+                                <div class="col-md-12 pt-5 ">
+                                    <input type="button" value="INGRESAR" class="p-1 btn color">
+                                </div>
+                                <div class="col-md-12 pt-4 text-center ">
+                                    <p class="title tamaño">¿Primera vez aquí?<span class="text">CREAR CUENTA</span></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- fin segunda vist -->
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
