--- a/src/calendario.html
+++ b/src/calendario.html
@@ -70,7 +70,7 @@
     <button id="guardar" type="button" class="btn btn-danger">Danger</button>
   </div>
   <div class="container">
-    <table class="table table-bordered">
+    <!-- <table class="table table-bordered">
       <thead>
         <tr id="contenedor">
             <th scope="col">#</th>
@@ -80,8 +80,8 @@
       <tbody id="bodyTable">
         <td id="th"></td>
       </tbody>
-    </table>
-    <!-- <table class="table table-bordered">
+    </table> -->
+    <table class="table table-bordered">
       <thead>
         <tr>
           <th scope="col">Lunes</th>
@@ -92,8 +92,8 @@
           <th scope="col">Sábado</th>
           <th scope="col">Domingo</th>
         </tr>
-      </thead> -->
-      <!-- <tbody>
+      </thead>
+    <tbody>
         <tr>
           <th scope="row">5:16</th>
           <td colspan="5" rowspan="8">
