--- a/index.html
+++ b/index.html
@@ -28,15 +28,24 @@
             <div class="col reservas">
                 <h3>Lista de Reservas</h3>
                 <table  id="table">
-                    <tr>
-                        <td>Producto</td>
-                        <td>Programa</td>
-                        <td>Fecha</td>
-                        <td>Hora</td>
-                        <td>Precio</td>
-                        <td>------</td>
-                    </tr>
-                </table>
+                        <tr>
+                            <td>Producto</td>
+                            <td>Programa</td>
+                            <td>Fecha</td>
+                            <td>Hora</td>
+                            <td>Precio</td>
+                            <td>------</td>
+                        </tr>
+                    </table>
+                    <table  >
+                        <tr>
+                            <td>
+                                <button id="calcul">TOTAL</button></td>
+                            <td id="total"></td>
+                        </tr>
+                    </table>
+                    <input type="button" value="Reservar" id="btnReserv">
+                    
             </div>
         </div>
        
